--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ packages = [
 python = "^3.7.2"
 systemrdl-compiler = "^1.25.0"
 peakrdl = { version = "^0.3.0", optional = true }
+py-markdown-table = "^0.3.3"
 
 [tool.poetry.extras]
 cli = ["peakrdl"]
