--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,30 +92,30 @@ jobs:
           name: documentation
           path: docs/_build/
 
-  # build-publish:
-  #   needs:
-  #     - test
-  #     - build-docs
-  #     - lint
-  #   name: Build source distribution
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Install Poetry
-  #       run: pipx install poetry
-  #     - name: Set up Python 3.10
-  #       uses: actions/setup-python@v4
-  #       with:
-  #         python-version: "3.10"
-  #         cache: "poetry"
-  #     - name: Build the package
-  #       run: poetry build
-  #     - name: Upload the built package
-  #       uses: actions/upload-artifact@v3
-  #       with:
-  #         name: package
-  #         path: dist/*
-  #     - name: Publish the package
-  #       run: |
-  #         poetry config http-basic.pypi __token__ ${{ secrets.PYPI_PASSWORD }}
-  #         poetry publish --skip-existing
+  build-publish:
+    needs:
+      - test
+      - build-docs
+      - lint
+    name: Build source distribution
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Poetry
+        run: pipx install poetry
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+          cache: "poetry"
+      - name: Build the package
+        run: poetry build
+      - name: Upload the built package
+        uses: actions/upload-artifact@v3
+        with:
+          name: package
+          path: dist/*
+      - name: Publish the package
+        run: |
+          poetry config http-basic.pypi __token__ ${{ secrets.PYPI_PASSWORD }}
+          poetry publish --skip-existing
