--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,6 +98,7 @@ jobs:
       - test
       - build-docs
       - lint
+    if: github.ref == 'refs/heads/main'
     name: Build source distribution
     runs-on: ubuntu-latest
     steps:
