--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,27 @@ on:
 
 
 jobs:
+  build-devcontainer:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout (GitHub)
+        uses: actions/checkout@v3
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and run Dev Container task
+        uses: devcontainers/ci@v0.3
+        with:
+          imageName: ghcr.io/systemrdl/peakrdl-markdown/devcontainer
+          cacheFrom: ghcr.io/systemrdl/peakrdl-markdown/devcontainer
+          push: always
+
   test:
     runs-on: ubuntu-latest
     strategy:
