--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,10 +76,10 @@ jobs:
       matrix:
         tool:
           - "black --check --diff"
-          - "pydocstyle"
-          - "pycodestyle"
-          - "pylint"
           - "mypy"
+          - "pydocstyle"
+          - "pylint"
+          - "ruff"
     steps:
       - uses: actions/checkout@v3
       - name: Install Poetry
