--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,9 @@ pre-commit = "^2.21.0"
 black = "^22.8.0"
 isort = "^5.10.1"
 mypy = "^0.971"
-pycodestyle = "^2.9.1"
 pydocstyle = "^6.1.1"
 pylint = "<2.15"  # Python 3.7.0 requirement.
+ruff = "^0.1.5"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.1.3"
