--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,7 @@
 {
-    "python.linting.mypyEnabled": true,
-    "python.formatting.provider": "black",
-    "python.linting.pydocstyleEnabled": true,
-    "python.linting.pycodestyleEnabled": true,
+    "[python]":{
+        "editor.defaultFormatter": "ms-python.black-formatter"
+    },
     "autoDocstring.docstringFormat": "pep257",
     "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python3",
     "python.envFile": "${workspaceFolder}/.env",
@@ -17,5 +16,4 @@
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
     "coverage-gutters.coverageReportFileName": "output/coverage/cov.xml",
-    "esbonio.sphinx.confDir": ""
 }
