--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,34 +1,33 @@
 repos:
   - repo: https://github.com/python-poetry/poetry
-    rev: "1.7.0"
+    rev: "1.8.0"
     hooks:
       - id: poetry-check
-  - repo: https://github.com/ambv/black
-    rev: 23.9.1
+      - id: poetry-lock
+        args: ["--no-update"]
+  - repo: https://github.com/psf/black
+    rev: "24.4.0"
     hooks:
       - id: black
   - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
+    rev: "5.13.2"
     hooks:
       - id: isort
   - repo: https://github.com/pycqa/pydocstyle
-    rev: 6.3.0
+    rev: "6.3.0"
     hooks:
       - id: pydocstyle
-  - repo: local
-    hooks:
-      - id: pylint
-        name: pylint
-        entry: poetry run pylint
-        language: system
-        types: [python]
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: "v0.1.5"
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: "v0.3.7"
     hooks:
       - id: ruff
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v1.6.1"
+    rev: "v1.9.0"
     hooks:
       - id: mypy
 
 exclude: ^example/
+
+ci:
+  skip:
+    - poetry-lock  # Due to errors during PyPI connection.
