pre-commit: Add markdownlint hook
Signed-off-by: Marek Pikuła <marek@serenitycode.dev>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,6 +25,10 @@ repos:
     rev: "v1.9.0"
     hooks:
       - id: mypy
+  - repo: https://github.com/markdownlint/markdownlint
+    rev: "v0.12.0"
+    hooks:
+      - id: markdownlint
 
 exclude: ^example/
 
