--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,29 +14,41 @@ classifiers = [
 repository = "https://github.com/SystemRDL/PeakRDL-Markdown"
 documentation = "https://peakrdl-markdown.readthedocs.io"
 readme = "README.md"
-packages = [
-    { include = "peakrdl_markdown", from = "src"}
-]
+packages = [{ include = "peakrdl_markdown", from = "src" }]
 
 [tool.poetry.dependencies]
-python = "^3.7.0"
+python = "^3.6.0"
 systemrdl-compiler = "^1.25.0"
 peakrdl = "^1.1.0"
 py-markdown-table = "^0.3.3"
 
 [tool.poetry.group.dev.dependencies]
-pre-commit = "^2.21.0"
+pre-commit = [
+    { version = "^2.0.0", python = ">=3.7,<3.9" },
+    { version = "^3.7.0", python = ">=3.9" },
+]
 
 [tool.poetry.group.lint.dependencies]
-black = "^22.8.0"
-isort = "^5.10.1"
+packaging = { version = "^24.0", python = ">=3.7" }
+black = [
+    { version = "^22.0.0", python = ">=3.7,<3.8" },
+    { version = "^24.4.0", python = ">=3.8" },
+]
+isort = { version = "^5.11.0", python = ">=3.7" }
 mypy = "^0.971"
 pydocstyle = "^6.1.1"
-ruff = "^0.1.5"
+ruff = { version = "^0.3.7", python = ">=3.7" }
 
 [tool.poetry.group.test.dependencies]
-pytest = "^7.1.3"
-pytest-cov = "^4.0.0"
+pytest = [
+    { version = "^7.0.0", python = ">=3.6,<3.8" },
+    { version = "^8.1.0", python = ">=3.8" },
+]
+pytest-cov = [
+    { version = "^4.0.0", python = ">=3.6,<3.8" },
+    { version = "^5.0.0", python = ">=3.8" },
+]
+coverage= {version = "^6.3", python = ">=3.7"}
 coveralls = "^3.3.1"
 
 [tool.poetry.group.doc.dependencies]
