--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,12 @@ systemrdl-compiler = "^1.25.0"
 peakrdl = "^1.1.0"
 py-markdown-table = "^0.3.3"
 
+# Dependabot force updates for Python >3.6
+gitpython = { version = "^3.1.41", python = ">=3.7" }
+setuptools = { version = "^65.5.1", python = ">=3.7" }
+pygments = { version = "^2.15.0", python = ">=3.7" }
+jinja2 = { version = "^3.1.3", python = ">=3.7" }
+
 [tool.poetry.group.dev.dependencies]
 pre-commit = [
     { version = "^2.0.0", python = ">=3.7,<3.9" },
@@ -29,11 +35,8 @@ pre-commit = [
 ]
 
 [tool.poetry.group.lint.dependencies]
-packaging = { version = "^24.0", python = ">=3.7" }
-black = [
-    { version = "^22.0.0", python = ">=3.7,<3.8" },
-    { version = "^24.4.0", python = ">=3.8" },
-]
+black = { version = "^24.4.0", python = ">=3.8" }
+packaging = { version = "^24.0", python = ">=3.8" } # Required for black dependency resolution.
 isort = { version = "^5.11.0", python = ">=3.7" }
 mypy = "^0.971"
 pydocstyle = "^6.1.1"
@@ -41,15 +44,19 @@ ruff = { version = "^0.3.7", python = ">=3.7" }
 
 [tool.poetry.group.test.dependencies]
 pytest = [
-    { version = "^7.0.0", python = ">=3.6,<3.8" },
-    { version = "^8.1.0", python = ">=3.8" },
+    { version = "^7.0.0", python = "<3.7" },
+    { version = "^7.2.0", python = ">3.7,<=3.8" },
+    { version = "^8.1.1", python = ">3.8" },
 ]
 pytest-cov = [
-    { version = "^4.0.0", python = ">=3.6,<3.8" },
+    { version = "^4.0.0", python = "<3.8" },
     { version = "^5.0.0", python = ">=3.8" },
 ]
-coverage= {version = "^6.3", python = ">=3.7"}
+coverage = { version = "^6.3", python = ">=3.7" }
 coveralls = "^3.3.1"
+
+# Dependabot force updates for Python >3.6
+requests = { version = "^2.31.0", python = ">=3.7" }
 
 [tool.poetry.group.doc.dependencies]
 linuxdoc = "^20211220"
