--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,10 +59,11 @@ coveralls = "^3.3.1"
 requests = { version = "^2.31.0", python = ">=3.7" }
 
 [tool.poetry.group.doc.dependencies]
-linuxdoc = "^20211220"
-Sphinx = "^5.2.3"
-sphinx-rtd-theme = "^1.0.0"
-m2r2 = "<0.3.3"
+linuxdoc = { version = "^20211220", python = ">=3.9" }
+Sphinx = { version = "^7.2.6", python = ">=3.9" }
+sphinx-rtd-theme = { version = "^2.0.0", python = ">=3.9" }
+m2r2 = { version = "^0.3.3", python = ">=3.9" }
+pygments-systemrdl = { version = "^1.2.0", python = ">=3.9"}
 
 [tool.poetry.plugins."peakrdl.exporters"]
 "markdown" = "peakrdl_markdown.__peakrdl__:Exporter"
