ci: Publish only on release
Signed-off-by: Marek Pikuła <marek@serenitycode.dev>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,7 +129,7 @@ jobs:
       - dependency-review
       - lint
       - test
-    if: github.ref == 'refs/heads/main'
+    if: github.event_name == 'release'
     name: Build source distribution
     runs-on: ubuntu-latest
     steps:
