--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ py-markdown-table = "^0.3.3"
 gitpython = { version = "^3.1.41", python = ">=3.7" }
 setuptools = { version = "^65.5.1", python = ">=3.7" }
 pygments = { version = "^2.15.0", python = ">=3.7" }
-jinja2 = { version = "^3.1.3", python = ">=3.7" }
+jinja2 = { version = "^3.1.4", python = ">=3.7" }
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = [
@@ -53,10 +53,13 @@ pytest-cov = [
     { version = "^5.0.0", python = ">=3.8" },
 ]
 coverage = { version = "^6.3", python = ">=3.7" }
-coveralls = "^3.3.1"
+coveralls = { version = "^3.3.1", python = ">=3.7" }
 
 # Dependabot force updates for Python >3.6
-requests = { version = "^2.31.0", python = ">=3.7" }
+requests = [
+    { version = "^2.31.0", python = ">=3.7,<3.8" },
+    { version = "^2.32.0", python = ">=3.8" }
+]
 
 [tool.poetry.group.doc.dependencies]
 linuxdoc = { version = "^20211220", python = ">=3.9" }
