--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,56 +17,42 @@ readme = "README.md"
 packages = [{ include = "peakrdl_markdown", from = "src" }]
 
 [tool.poetry.dependencies]
-python = "^3.6.0"
-systemrdl-compiler = "^1.25.0"
-peakrdl = "^1.1.0"
-py-markdown-table = "^0.3.3"
-
-# Dependabot force updates for Python >3.6
-gitpython = { version = "^3.1.41", python = ">=3.7" }
-setuptools = { version = "^65.5.1", python = ">=3.7" }
-pygments = { version = "^2.15.0", python = ">=3.7" }
-jinja2 = { version = "^3.1.4", python = ">=3.7" }
-
-[tool.poetry.group.dev.dependencies]
-pre-commit = [
-    { version = "^2.0.0", python = ">=3.7,<3.9" },
-    { version = "^3.7.0", python = ">=3.9" },
+python = "^3.7.0"
+systemrdl-compiler = "^1.30.1"
+peakrdl = "^1.5.0"
+py-markdown-table = [
+    { version = "<1.0.0", python = "<3.8" },
+    { version = "^1.3.0", python = ">=3.8" },
 ]
 
+[tool.poetry.group.dev.dependencies]
+pre-commit = { version = "^4.4.0", python = ">=3.12" }
+
 [tool.poetry.group.lint.dependencies]
-black = { version = "^24.4.0", python = ">=3.8" }
-packaging = { version = "^24.0", python = ">=3.8" } # Required for black dependency resolution.
-isort = { version = "^5.11.0", python = ">=3.7" }
-mypy = "^0.971"
-pydocstyle = "^6.1.1"
-ruff = { version = "^0.3.7", python = ">=3.7" }
+black = { version = "^25.11.0", python = ">=3.12" }
+isort = { version = "^7.0.0", python = ">=3.12" }
+mypy = { version = "^1.18.2", python = ">=3.12" }
+pydocstyle = { version = "^6.3.0", python = ">=3.12" }
+ruff = { version = "^0.14.4", python = ">=3.12" }
 
 [tool.poetry.group.test.dependencies]
 pytest = [
-    { version = "^7.0.0", python = "<3.7" },
-    { version = "^7.2.0", python = ">3.7,<=3.8" },
-    { version = "^8.1.1", python = ">3.8" },
+    { version = "<8.1.1", python = "<3.8" },
+    { version = "^8.3.0", python = ">=3.8" },
 ]
 pytest-cov = [
-    { version = "^4.0.0", python = "<3.8" },
+    { version = "<5.0.0", python = "<3.8" },
     { version = "^5.0.0", python = ">=3.8" },
 ]
-coverage = { version = "^6.3", python = ">=3.7" }
-coveralls = { version = "^3.3.1", python = ">=3.7" }
-
-# Dependabot force updates for Python >3.6
-requests = [
-    { version = "^2.31.0", python = ">=3.7,<3.8" },
-    { version = "^2.32.0", python = ">=3.8" }
-]
+coverage = "^6.3"
+coveralls = "^3.3.1"
 
 [tool.poetry.group.doc.dependencies]
-linuxdoc = { version = "^20211220", python = ">=3.9" }
-Sphinx = { version = "^7.2.6", python = ">=3.9" }
-sphinx-rtd-theme = { version = "^2.0.0", python = ">=3.9" }
-m2r2 = { version = "^0.3.3", python = ">=3.9" }
-pygments-systemrdl = { version = "^1.2.0", python = ">=3.9"}
+linuxdoc = { version = "^20240924", python = ">=3.12" }
+m2r2 = { version = "^0.3.4", python = ">=3.12" }
+pygments-systemrdl = { version = "^1.3.0", python = ">=3.12" }
+Sphinx = { version = "^8.2.3", python = ">=3.12" }
+sphinx-rtd-theme = { version = "^3.0.2", python = ">=3.12" }
 
 [tool.poetry.plugins."peakrdl.exporters"]
 "markdown" = "peakrdl_markdown.__peakrdl__:Exporter"
