--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ packages = [{ include = "peakrdl_markdown", from = "src" }]
 [tool.poetry.dependencies]
 python = "^3.7.0"
 systemrdl-compiler = "^1.30.1"
-peakrdl = "^1.5.0"
+peakrdl-cli = "^1.5.0"
 py-markdown-table = [
     { version = "<1.0.0", python = "<3.8" },
     { version = "^1.3.0", python = ">=3.8" },
