--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,11 @@ repos:
     hooks:
       - id: poetry-check
       - id: poetry-lock
+  - repo: https://github.com/python-poetry/poetry-plugin-export
+    rev: "1.9.0"
+    hooks:
+      - id: poetry-export
+        args: ["-f", "requirements.txt", "-o", "docs/requirements.txt", "--without-hashes", "--only", "doc"]
   - repo: https://github.com/psf/black-pre-commit-mirror
     rev: "25.11.0"
     hooks:
