--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,15 +5,13 @@
 version: 2
 
 build:
-  os: ubuntu-lts-latest
+  os: ubuntu-24.04
   tools:
     python: "3.12"
 
 sphinx:
   configuration: docs/conf.py
 
-# TODO: Move to Poetry export once
-# https://github.com/python-poetry/poetry-plugin-export/issues/176 is fixed.
 python:
   install:
-  - requirements: docs/requirements.txt
+    - requirements: docs/requirements.txt
