--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,32 @@
-pygments-systemrdl
-linuxdoc
-m2r2
-sphinx_rtd_theme
+alabaster==1.0.0 ; python_version >= "3.12" and python_full_version < "4.0.0"
+babel==2.17.0 ; python_version >= "3.12" and python_full_version < "4.0.0"
+certifi==2025.11.12 ; python_version >= "3.12" and python_full_version < "4.0.0"
+charset-normalizer==3.4.4 ; python_version >= "3.12" and python_full_version < "4.0.0"
+colorama==0.4.6 ; python_version >= "3.12" and python_full_version < "4.0.0" and sys_platform == "win32"
+docutils==0.21.2 ; python_version >= "3.12" and python_full_version < "4.0.0"
+fspath==20230629 ; python_version >= "3.12" and python_full_version < "4.0.0"
+idna==3.11 ; python_version >= "3.12" and python_full_version < "4.0.0"
+imagesize==1.4.1 ; python_version >= "3.12" and python_full_version < "4.0.0"
+jinja2==3.1.6 ; python_version >= "3.12" and python_full_version < "4.0.0"
+linuxdoc==20240924 ; python_version >= "3.12" and python_full_version < "4.0.0"
+m2r2==0.3.4 ; python_version >= "3.12" and python_full_version < "4.0.0"
+markupsafe==2.1.5 ; python_version >= "3.12" and python_full_version < "4.0.0"
+mistune==0.8.4 ; python_version >= "3.12" and python_full_version < "4.0.0"
+packaging==25.0 ; python_version >= "3.12" and python_full_version < "4.0.0"
+pygments-systemrdl==1.3.0 ; python_version >= "3.12" and python_full_version < "4.0.0"
+pygments==2.19.2 ; python_version >= "3.12" and python_full_version < "4.0.0"
+requests==2.31.0 ; python_version >= "3.12" and python_full_version < "4.0.0"
+roman-numerals-py==3.1.0 ; python_version >= "3.12" and python_full_version < "4.0.0"
+setuptools==80.9.0 ; python_version >= "3.12" and python_full_version < "4.0.0"
+six==1.17.0 ; python_version >= "3.12" and python_full_version < "4.0.0"
+snowballstemmer==3.0.1 ; python_version >= "3.12" and python_full_version < "4.0.0"
+sphinx-rtd-theme==3.0.2 ; python_version >= "3.12" and python_full_version < "4.0.0"
+sphinx==8.2.3 ; python_version >= "3.12" and python_full_version < "4.0.0"
+sphinxcontrib-applehelp==2.0.0 ; python_version >= "3.12" and python_full_version < "4.0.0"
+sphinxcontrib-devhelp==2.0.0 ; python_version >= "3.12" and python_full_version < "4.0.0"
+sphinxcontrib-htmlhelp==2.1.0 ; python_version >= "3.12" and python_full_version < "4.0.0"
+sphinxcontrib-jquery==4.1 ; python_version >= "3.12" and python_full_version < "4.0.0"
+sphinxcontrib-jsmath==1.0.1 ; python_version >= "3.12" and python_full_version < "4.0.0"
+sphinxcontrib-qthelp==2.0.0 ; python_version >= "3.12" and python_full_version < "4.0.0"
+sphinxcontrib-serializinghtml==2.0.0 ; python_version >= "3.12" and python_full_version < "4.0.0"
+urllib3==2.0.7 ; python_version >= "3.12" and python_full_version < "4.0.0"
